package com.example.snakegame;

import android.graphics.Canvas;
import android.graphics.Paint;

public interface Drawable {
    void draw(Canvas canvas, Paint paint);
}
